--- a/index.html
+++ b/index.html
@@ -606,8 +606,8 @@
 					</tfoot>
 			</table>
 			<form class="modal-form" action="">
-				<input class="modal-input" type="text" placeholder="Имя" name="nameCustomer">
-				<input class="modal-input" type="text" placeholder="Телефон" name="phoneCustomer">
+				<input class="modal-input modal-name" type="text" placeholder="Имя" name="nameCustomer">
+				<input class="modal-input modal-phone" type="text" placeholder="Телефон" name="phoneCustomer">
 				<button class="button cart-buy" type="submit">
 					<span class="button-text">Checkout</span>
 				</button>
